# akef

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
browser/: Dockerfile  detail.md  index.ts  spec-gen.ts
data/: item.json  items.ts  machine.yml  recipe.json  space.yml  weapon.json  weapon.ts
recipe/: Dockerfile  get-item.ts  get-recipe.ts  index-hardcode.js  index.css  index.html  index.js  index.ts  make-data.rs  make-data.ts  make-icon.rs  make-page.ts
sanity/: essence.ts  get-weapon.ts
